--- a/springboot/springboot/pom.xml
+++ b/springboot/springboot/pom.xml
@@ -3,12 +3,15 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
+	<!-- Inherit defaults from Spring Boot -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>top.fireguy</groupId>
 	<artifactId>springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,10 +19,19 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<!-- Java 1.8 as the default compiler level. -->
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
+		<!-- All official starters follow a similar naming pattern; spring-boot-starter-*, 
+			where * is aparticular type of application. This naming structure is intended 
+			to help when you need to find astarter. The Maven integration in many IDEs 
+			lets you search dependencies by name. 
+			e.g.
+			spring-boot-starter-data-jpa
+			thirdpartyproject-spring-boot-starter.
+			-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -35,10 +47,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- Using Spring Boot without the Parent POM If you do not want to use 
+			the spring-boot-starter-parent, you can still keep the benefit of thedependency 
+			management (but not the plugin management) by using a scope=import dependency,as 
+			follows: <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-dependencies</artifactId> 
+			<version>2.1.3.RELEASE</version> <type>pom</type> <scope>import</scope> </dependency> -->
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- Spring Boot includes a Maven plugin that can package the project 
+				as an executable jar. -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
